# bitfields

./: Cargo.toml  README
src/: helper_traits.rs  lib.rs
src/macros/: Cargo.toml
src/macros/src/: lib.rs
tests/: test.rs
