[package]
name = "bitfi-macros"
version = "0.2.0"
edition = "2024"
description = "Macros for the bitfi crate"
authors = ["Saúl Valdelvira <saul@saulv.es>"]
license = "MIT"
readme = "../../README"
repository = "https://git.saulv.es/bitfields"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
